fix: fix flickering dropdown on hover over its corner (#230)

--- a/packages/core/styles/components/dropdown.pcss
+++ b/packages/core/styles/components/dropdown.pcss
@@ -22,6 +22,7 @@
   &--show {
     ^&__menu {
       opacity: 1;
+      pointer-events: all;
       transform: translateY(0);
       visibility: visible;
     }
@@ -49,6 +50,7 @@
     opacity: 0;
     overflow-y: auto;
     padding: 0.5rem;
+    pointer-events: none;
     position: absolute;
     top: calc(100% - var(--ifm-navbar-item-padding-vertical) + 0.3rem);
     transform: translateY(-0.625rem);
